title text and font sizes

--- a/style.css
+++ b/style.css
@@ -116,11 +116,11 @@
   }
   
   .intro__title {
-    font-size: 20vw;
+    font-size: 18vw;
     overflow: hidden;
     letter-spacing: -2.3vw;
     padding-right: 2.3vw;
-    color: #ffffff;
+    color: #000000;
     background-image: url(/assets/images/01.jpg);
 
     background-repeat: repeat;
@@ -319,7 +319,7 @@
   @media all and (max-width: 768px) {
     .col__content-title {
       margin: 0 0 6vw;
-      font-size: 18vw;
+      font-size: 14vw;
     }
   }
   
