--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@
     letter-spacing: -2.3vw;
     padding-right: 2.3vw;
     color: #000000;
-    background-image: url(/assets/images/01.jpg);
+    background-image: url(assets/images/01.jpg);
 
     background-repeat: repeat;
     -webkit-background-clip: text;
